tests/render_types/render_types.exp
Error ---------------------------------------------------------------------------------------------------- import.js:7:2

Cannot cast `<Foo />` to renders `React.Element` because `Foo` element [1] does not render `React.Element` [2].
[incompatible-cast]

   import.js:7:2
   7| (<Foo />: renders React.Element<typeof Bar>); // ERROR
       ^^^^^^^ [1]

References:
   import.js:7:11
   7| (<Foo />: renders React.Element<typeof Bar>); // ERROR
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- import.js:8:2

Cannot cast `<Bar />` to renders `React.Element` because `Bar` element [1] does not render `React.Element` [2].
[incompatible-cast]

   import.js:8:2
   8| (<Bar />: renders React.Element<typeof Foo>); // ERROR
       ^^^^^^^ [1]

References:
   import.js:8:11
   8| (<Bar />: renders React.Element<typeof Foo>); // ERROR
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:10:2

Cannot cast `<MaybeNumber />` to renders number because a value that renders nothing [1] does not render number [2].
[incompatible-cast]

   import.js:10:2
   10| (<MaybeNumber />: renders number); // ERROR
        ^^^^^^^^^^^^^^^ [1]

References:
   import.js:10:27
   10| (<MaybeNumber />: renders number); // ERROR
                                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:14:2

Cannot cast `<StarNumber />` to renders number because `$ReadOnlyArray` [1] does not render number [2].
[incompatible-cast]

   import.js:14:2
    14| (<StarNumber />: renders number); // ERROR
         ^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:698:15
   698| declare class $ReadOnlyArray<+T> {
                      ^^^^^^^^^^^^^^ [1]
   import.js:14:26
    14| (<StarNumber />: renders number); // ERROR
                                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:14:2

Cannot cast `<StarNumber />` to renders number because a value that renders nothing [1] does not render number [2].
[incompatible-cast]

   import.js:14:2
   14| (<StarNumber />: renders number); // ERROR
        ^^^^^^^^^^^^^^ [1]

References:
   import.js:14:26
   14| (<StarNumber />: renders number); // ERROR
                                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:15:2

Cannot cast `<StarNumber />` to renders? number because `$ReadOnlyArray` [1] does not render number [2].
[incompatible-cast]

   import.js:15:2
    15| (<StarNumber />: renders? number); // ERROR
         ^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:698:15
   698| declare class $ReadOnlyArray<+T> {
                      ^^^^^^^^^^^^^^ [1]
   import.js:15:27
    15| (<StarNumber />: renders? number); // ERROR
                                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- interop.js:19:2

Cannot cast `<Baz />` to renders `React.Element` because `React.Element` [1] does not render `React.Element` [2].
[incompatible-cast]

   interop.js:19:2
   19| (<Baz />) as renders React.Element<typeof Qux>; // ERROR
        ^^^^^^^ [1]

References:
   interop.js:19:14
   19| (<Baz />) as renders React.Element<typeof Qux>; // ERROR
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- interop.js:25:2

Cannot cast `<RendersBaz />` to renders `React.Element` because `React.Element` [1] does not render `React.Element` [2].
[incompatible-cast]

   interop.js:25:2
   25| (<RendersBaz />) as renders React.Element<typeof Qux>; // ERROR
        ^^^^^^^^^^^^^^ [1]

References:
   interop.js:25:21
   25| (<RendersBaz />) as renders React.Element<typeof Qux>; // ERROR
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- interop.js:31:2

Cannot cast `<LongerChain />` to renders `React.Element` because `React.Element` [1] does not render
`React.Element` [2]. [incompatible-cast]

   interop.js:31:2
   31| (<LongerChain />) as renders React.Element<typeof Qux>; // ERROR
        ^^^^^^^^^^^^^^^ [1]

References:
   interop.js:31:22
   31| (<LongerChain />) as renders React.Element<typeof Qux>; // ERROR
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------- no_any_with_renders_react_node.js:5:10

Cannot return `Bar` because: [incompatible-return]
 - Either class `Bar` [1] is incompatible with `React.Element` [2].
 - Or class `Bar` [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in class `Bar` [1] but exists in `$Iterable` [4].

   no_any_with_renders_react_node.js:5:10
    5|   return Bar; // ERROR
                ^^^

References:
   no_any_with_renders_react_node.js:3:7
    3| class Bar {}
             ^^^ [1]
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error --------------------------------------------------------------------------------- no_spoofing_element_types.js:3:2

Cannot cast `x` to renders `React.Element` because object type [1] does not render `React.Element` [2].
[incompatible-cast]

   no_spoofing_element_types.js:3:2
   3| (x: renders React$Element<typeof Foo>); // ERROR!
       ^

References:
   no_spoofing_element_types.js:2:18
   2| declare const x: {+type: typeof Foo};
                       ^^^^^^^^^^^^^^^^^^^ [1]
   no_spoofing_element_types.js:3:13
   3| (x: renders React$Element<typeof Foo>); // ERROR!
                  ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------- no_spoofing_element_types.js:7:2

Cannot cast `y` to renders `React.Element` because object type [1] does not render `React.Element` [2].
[incompatible-cast]

   no_spoofing_element_types.js:7:2
   7| (y: renders React$Element<typeof Bar>); // ERROR! TODO better error message
       ^

References:
   no_spoofing_element_types.js:6:18
   6| declare const y: {+type: typeof Bar};
                       ^^^^^^^^^^^^^^^^^^^ [1]
   no_spoofing_element_types.js:7:5
   7| (y: renders React$Element<typeof Bar>); // ERROR! TODO better error message
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- poly.js:11:1

Cannot cast `el` to renders undefined because `Fragment` element [1] does not render undefined [2]. [incompatible-cast]

   poly.js:11:1
   11| el as renders void; // error
       ^^ [1]

References:
   poly.js:11:15
   11| el as renders void; // error
                     ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- poly.js:33:5

Cannot create `FooContainer` element because `Fragment` element [1] does not render `React.Element` [2] in property
`children`. [incompatible-type]

   poly.js:33:5
           v---------
   33|     <Fragment>
   34|       <Bar />
   35|     </Fragment>
           ----------^ [1]

References:
   poly.js:20:34
   20| component FooContainer(children: renders React.Element<typeof Foo>) {
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- renders_maybe.js:23:2

Cannot cast `<Bar />` to renders? `MenuItem` because `Bar` element [1] does not render `MenuItem` [2].
[incompatible-cast]

   renders_maybe.js:23:2
   23| (<Bar />) as renders? MenuItem; // ERROR
        ^^^^^^^ [1]

References:
   renders_maybe.js:23:14
   23| (<Bar />) as renders? MenuItem; // ERROR
                    ^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- renders_maybe.js:30:1

Cannot cast `Bad` to renders? `MenuItem` because `Bar` [1] does not render `MenuItem` [2]. [incompatible-cast]

   renders_maybe.js:30:1
   30| Bad as renders? MenuItem; // ERROR
       ^^^ [1]

References:
   renders_maybe.js:30:8
   30| Bad as renders? MenuItem; // ERROR
              ^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- renders_maybe.js:36:1

Cannot cast `rendersMaybeMenuItem` to renders `MenuItem` because a value that renders nothing [1] does not render
`MenuItem` [2]. [incompatible-cast]

   renders_maybe.js:36:1
   36| rendersMaybeMenuItem as renders MenuItem; // ERROR
       ^^^^^^^^^^^^^^^^^^^^

References:
   renders_maybe.js:35:37
   35| declare const rendersMaybeMenuItem: renders? MenuItem;
                                           ^^^^^^^^^^^^^^^^^ [1]
   renders_maybe.js:36:25
   36| rendersMaybeMenuItem as renders MenuItem; // ERROR
                               ^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- renders_maybe.js:39:1

Cannot cast `rendersMaybeUnion` to renders `MenuItem` because a value that renders nothing [1] does not render
`MenuItem` [2]. [incompatible-cast]

   renders_maybe.js:39:1
   39| rendersMaybeUnion as renders MenuItem; // ERROR
       ^^^^^^^^^^^^^^^^^

References:
   renders_maybe.js:38:34
   38| declare const rendersMaybeUnion: renders? (MenuItem | Bar);
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_maybe.js:39:22
   39| rendersMaybeUnion as renders MenuItem; // ERROR
                            ^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- renders_maybe.js:39:1

Cannot cast `rendersMaybeUnion` to renders `MenuItem` because `Bar` [1] does not render `MenuItem` [2].
[incompatible-cast]

   renders_maybe.js:39:1
   39| rendersMaybeUnion as renders MenuItem; // ERROR
       ^^^^^^^^^^^^^^^^^ [1]

References:
   renders_maybe.js:39:22
   39| rendersMaybeUnion as renders MenuItem; // ERROR
                            ^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- renders_maybe.js:48:1

Cannot cast `rendersMaybeMenuItem` to renders union type because: [incompatible-cast]
 - Either `MenuItem` [1] does not render `Bar` [2].
 - Or renders? `MenuItem` [1] is incompatible with boolean literal `false` [3].

   renders_maybe.js:48:1
   48| rendersMaybeMenuItem as renders (null | false | void | Bar); // ERROR
       ^^^^^^^^^^^^^^^^^^^^ [1]

References:
   renders_maybe.js:48:56
   48| rendersMaybeMenuItem as renders (null | false | void | Bar); // ERROR
                                                              ^^^ [2]
   renders_maybe.js:48:41
   48| rendersMaybeMenuItem as renders (null | false | void | Bar); // ERROR
                                               ^^^^^ [3]


Error ---------------------------------------------------------------------------------------------- renders_star.js:8:2

Cannot cast `true` to renders* `MenuItem` because boolean [1] does not render `MenuItem` [2]. [incompatible-cast]

   renders_star.js:8:2
   8| (true: renders* MenuItem); // ERROR
       ^^^^ [1]

References:
   renders_star.js:8:8
   8| (true: renders* MenuItem); // ERROR
             ^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- renders_star.js:24:30

Cannot resolve name `RendersHuh`. [cannot-resolve-name]

   24| declare const rendersHuhBad: RendersHuh<Bad>;
                                    ^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- renders_star.js:30:35

Cannot cast array literal to renders* `MenuItem` because `Bad` element [1] does not render `MenuItem` [2].
[incompatible-cast]

   renders_star.js:30:35
   30| ([<MenuItem />, <BlueMenuItem />, <Bad />]: renders* MenuItem); // ERROR
                                         ^^^^^^^ [1]

References:
   renders_star.js:30:45
   30| ([<MenuItem />, <BlueMenuItem />, <Bad />]: renders* MenuItem); // ERROR
                                                   ^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:38:3

Cannot cast `rendersFooOrBar` to `typeof rendersFooOrRendersBar` because: [incompatible-cast]
 - Either `React.Element` [1] does not render `React.Element` [2].
 - Or `React.Element` [1] does not render `React.Element` [3].

   renders_to_renders.js:38:3
   38|   rendersFooOrBar as typeof rendersFooOrRendersBar; // ERROR
         ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:26:5
   26|   | renders React$Element<typeof Foo>
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   renders_to_renders.js:27:5
   27|   | renders React$Element<typeof Bar>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:44:3

Cannot cast `rendersFoo` to renders `React.Element` because `React.Element` [1] does not render `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:44:3
   44|   rendersFoo as renders React$Element<typeof Bar>; // ERROR
         ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:44:17
   44|   rendersFoo as renders React$Element<typeof Bar>; // ERROR
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:45:3

Cannot cast `rendersFoo` to renders `React.Element` because `React.Element` [1] does not render `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:45:3
   45|   rendersFoo as renders React$Element<typeof Bar>; // ERROR
         ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:45:17
   45|   rendersFoo as renders React$Element<typeof Bar>; // ERROR
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:47:3

Cannot cast `rendersFoo` to renders renders `React.Element` because `React.Element` [1] does not render
`React.Element` [2]. [incompatible-cast]

   renders_to_renders.js:47:3
   47|   rendersFoo as renders (renders React$Element<typeof Bar>); // ERROR
         ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:47:26
   47|   rendersFoo as renders (renders React$Element<typeof Bar>); // ERROR
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:48:3

Cannot cast `rendersFoo` to renders renders `React.Element` because `React.Element` [1] does not render
`React.Element` [2]. [incompatible-cast]

   renders_to_renders.js:48:3
   48|   rendersFoo as renders (renders React$Element<typeof Bar>); // ERROR
         ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:48:26
   48|   rendersFoo as renders (renders React$Element<typeof Bar>); // ERROR
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:62:3

Cannot cast `rendersQux` to renders union type because: [incompatible-cast]
 - Either `React.Element` [1] does not render `React.Element` [2].
 - Or `React.Element` [1] does not render `React.Element` [3].

   renders_to_renders.js:62:3
   62|   rendersQux as renders (React$Element<typeof Foo> | React$Element<typeof Baz>); // ERROR
         ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:62:26
   62|   rendersQux as renders (React$Element<typeof Foo> | React$Element<typeof Baz>); // ERROR
                                ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   renders_to_renders.js:62:54
   62|   rendersQux as renders (React$Element<typeof Foo> | React$Element<typeof Baz>); // ERROR
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:78:3

Cannot cast `rendersBazOrBaz` to renders `React.Element` because `React.Element` [1] does not render
`React.Element` [2]. [incompatible-cast]

   renders_to_renders.js:78:3
   78|   rendersBazOrBaz as renders React$Element<typeof Bar>; // ERROR
         ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:78:22
   78|   rendersBazOrBaz as renders React$Element<typeof Bar>; // ERROR
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:92:3

Cannot cast `rendersFooOrBar` to renders union type because: [incompatible-cast]
 - Either `React.Element` [1] does not render `React.Element` [2].
 - Or `React.Element` [1] does not render `React.Element` [3].

   renders_to_renders.js:92:3
   92|   rendersFooOrBar as renders (
         ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:93:7
   93|     | React$Element<typeof Foo>
             ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   renders_to_renders.js:94:7
   94|     | React$Element<typeof Baz>
             ^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:101:3

Cannot cast `Foo` to renders `React.Element` because component Foo [1] does not render `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:101:3
   101|   Foo as renders React$Element<typeof Foo>; // ERROR
          ^^^

References:
   renders_to_renders.js:2:1
     2| component Foo() renders null {
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:101:10
   101|   Foo as renders React$Element<typeof Foo>; // ERROR
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:107:3

Cannot cast `mixedElement` to renders union type because `React.Element` [1] does not render union type [2].
[incompatible-cast]

   renders_to_renders.js:107:3
   107|   mixedElement as renders (
          ^^^^^^^^^^^^

References:
   renders_to_renders.js:105:31
   105|   declare const mixedElement: React$MixedElement;
                                      ^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:107:19
                          v--------
   107|   mixedElement as renders (
   108|     | React$Element<typeof Foo>
   109|     | React$Element<typeof Bar>
   110|   ); // ERROR
          ^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:116:3

Cannot cast `rendersFooOrBar` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-cast]

   renders_to_renders.js:116:3
   116|   rendersFooOrBar as empty; // ERROR
          ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:162:35
   162| declare type React$MixedElement = React$Element<React$ElementType>;
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:116:22
   116|   rendersFooOrBar as empty; // ERROR
                             ^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:119:3

Cannot cast `rendersNode` to `React.MixedElement` because undefined [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:119:3
   119|   rendersNode as React$MixedElement; // ERROR
          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:16:5
    16|   | void
            ^^^^ [1]
   renders_to_renders.js:119:18
   119|   rendersNode as React$MixedElement; // ERROR
                         ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:119:3

Cannot cast `rendersNode` to `React.MixedElement` because null [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:119:3
   119|   rendersNode as React$MixedElement; // ERROR
          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:17:5
    17|   | null
            ^^^^ [1]
   renders_to_renders.js:119:18
   119|   rendersNode as React$MixedElement; // ERROR
                         ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:119:3

Cannot cast `rendersNode` to `React.MixedElement` because boolean [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:119:3
   119|   rendersNode as React$MixedElement; // ERROR
          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:18:5
    18|   | boolean
            ^^^^^^^ [1]
   renders_to_renders.js:119:18
   119|   rendersNode as React$MixedElement; // ERROR
                         ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:119:3

Cannot cast `rendersNode` to `React.MixedElement` because number [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:119:3
   119|   rendersNode as React$MixedElement; // ERROR
          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:19:5
    19|   | number
            ^^^^^^ [1]
   renders_to_renders.js:119:18
   119|   rendersNode as React$MixedElement; // ERROR
                         ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:119:3

Cannot cast `rendersNode` to `React.MixedElement` because string [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:119:3
   119|   rendersNode as React$MixedElement; // ERROR
          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:20:5
    20|   | string
            ^^^^^^ [1]
   renders_to_renders.js:119:18
   119|   rendersNode as React$MixedElement; // ERROR
                         ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:119:3

Cannot cast `rendersNode` to `React.MixedElement` because `React.Portal` [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:119:3
   119|   rendersNode as React$MixedElement; // ERROR
          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:22:5
    22|   | React$Portal
            ^^^^^^^^^^^^ [1]
   renders_to_renders.js:119:18
   119|   rendersNode as React$MixedElement; // ERROR
                         ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:119:3

Cannot cast `rendersNode` to `React.MixedElement` because `$Iterable` [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:119:3
   119|   rendersNode as React$MixedElement; // ERROR
          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:23:5
    23|   | Iterable<?React$Node>;
            ^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:119:18
   119|   rendersNode as React$MixedElement; // ERROR
                         ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:122:3

Cannot cast `rendersNullOrNull` to null because undefined [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:122:3
   122|   rendersNullOrNull as null; // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:16:5
    16|   | void
            ^^^^ [1]
   renders_to_renders.js:122:24
   122|   rendersNullOrNull as null; // ERROR
                               ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:122:3

Cannot cast `rendersNullOrNull` to null because boolean [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:122:3
   122|   rendersNullOrNull as null; // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:18:5
    18|   | boolean
            ^^^^^^^ [1]
   renders_to_renders.js:122:24
   122|   rendersNullOrNull as null; // ERROR
                               ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:122:3

Cannot cast `rendersNullOrNull` to null because number [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:122:3
   122|   rendersNullOrNull as null; // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:19:5
    19|   | number
            ^^^^^^ [1]
   renders_to_renders.js:122:24
   122|   rendersNullOrNull as null; // ERROR
                               ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:122:3

Cannot cast `rendersNullOrNull` to null because string [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:122:3
   122|   rendersNullOrNull as null; // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:20:5
    20|   | string
            ^^^^^^ [1]
   renders_to_renders.js:122:24
   122|   rendersNullOrNull as null; // ERROR
                               ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:122:3

Cannot cast `rendersNullOrNull` to null because `React.Element` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:122:3
   122|   rendersNullOrNull as null; // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:21:5
    21|   | React$Element<any>
            ^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:122:24
   122|   rendersNullOrNull as null; // ERROR
                               ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:122:3

Cannot cast `rendersNullOrNull` to null because `React.Portal` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:122:3
   122|   rendersNullOrNull as null; // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:22:5
    22|   | React$Portal
            ^^^^^^^^^^^^ [1]
   renders_to_renders.js:122:24
   122|   rendersNullOrNull as null; // ERROR
                               ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:122:3

Cannot cast `rendersNullOrNull` to null because `$Iterable` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:122:3
   122|   rendersNullOrNull as null; // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:23:5
    23|   | Iterable<?React$Node>;
            ^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:122:24
   122|   rendersNullOrNull as null; // ERROR
                               ^^^^ [2]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:123:19

Cannot get `rendersFooOrBar.props` because property `props` is missing in `React.Element` [1]. [prop-missing]

   renders_to_renders.js:123:19
   123|   rendersFooOrBar.props; // ERROR
                          ^^^^^

References:
   <BUILTINS>/react.js:162:35
   162| declare type React$MixedElement = React$Element<React$ElementType>;
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in undefined [1]. [incompatible-use]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:16:5
    16|   | void
            ^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in null [1]. [incompatible-use]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:17:5
    17|   | null
            ^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in `Boolean` [1]. [prop-missing]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:18:5
    18|   | boolean
            ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in `Number` [1]. [prop-missing]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:19:5
    19|   | number
            ^^^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in `String` [1]. [prop-missing]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:20:5
    20|   | string
            ^^^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in `React.Element` [1]. [prop-missing]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:21:5
    21|   | React$Element<any>
            ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in `React.Portal` [1]. [incompatible-use]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:22:5
    22|   | React$Portal
            ^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:124:15

Cannot get `rendersNode.props` because property `props` is missing in `$Iterable` [1]. [prop-missing]

   renders_to_renders.js:124:15
   124|   rendersNode.props; // ERROR
                      ^^^^^

References:
   <BUILTINS>/react.js:23:5
    23|   | Iterable<?React$Node>;
            ^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:130:3

Cannot cast `rendersBaz` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-cast]

   renders_to_renders.js:130:3
   130|   rendersBaz as empty; // ERROR
          ^^^^^^^^^^

References:
   <BUILTINS>/react.js:162:35
   162| declare type React$MixedElement = React$Element<React$ElementType>;
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:130:17
   130|   rendersBaz as empty; // ERROR
                        ^^^^^ [2]


Error ------------------------------------------------------------------------------------- renders_to_renders.js:131:14

Cannot get `rendersBaz.props` because property `props` is missing in `React.Element` [1]. [prop-missing]

   renders_to_renders.js:131:14
   131|   rendersBaz.props; // ERROR
                     ^^^^^

References:
   <BUILTINS>/react.js:162:35
   162| declare type React$MixedElement = React$Element<React$ElementType>;
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------- union_promotion.js:6:2

Cannot cast `a` to renders `React.Element` because: [incompatible-cast]
 - Either `Baz` [1] does not render `typeof Foo` [2].
 - Or `Baz` [1] does not render `typeof Bar` [3].

   union_promotion.js:6:2
   6| (a: renders React$Element<typeof Foo | typeof Bar>); // ERROR
       ^ [1]

References:
   union_promotion.js:6:27
   6| (a: renders React$Element<typeof Foo | typeof Bar>); // ERROR
                                ^^^^^^^^^^ [2]
   union_promotion.js:6:40
   6| (a: renders React$Element<typeof Foo | typeof Bar>); // ERROR
                                             ^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------- validate_instantiation.js:2:18

Cannot use object type [1] as a render type because: [incompatible-type]
 - Either object type [1] is incompatible with `React.Element` [2].
 - Or object type [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object type [1] but exists in `$Iterable` [4].

Render types must be a subtype of `React.Node` or a reference to a component-syntax component.

   validate_instantiation.js:2:18
    2| type Y = renders {}; // ERROR
                        ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------- validation/autofixable.js:7:23

Cannot use boolean literal `false` [1], null [2] and undefined [3] as the type argument of renders type. Only elements
of a component-syntax components can appear in renders. If you want to express the idea of rendering zero or one item,
please use `renders?` instead. [invalid-render]

   validation/autofixable.js:7:23
   7| type RBad1 = renders (Foo | null | void | false);
                            ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   validation/autofixable.js:7:43
   7| type RBad1 = renders (Foo | null | void | false);
                                                ^^^^^ [1]
   validation/autofixable.js:7:29
   7| type RBad1 = renders (Foo | null | void | false);
                                  ^^^^ [2]
   validation/autofixable.js:7:36
   7| type RBad1 = renders (Foo | null | void | false);
                                         ^^^^ [3]


Error ----------------------------------------------------------------------------------- validation/autofixable.js:8:23

Cannot use read-only array type [1], array type [2], array type [3], `$Iterable` [4] and `Set` [5] as the type argument
of renders type. Only elements of a component-syntax components can appear in renders. If you want to express the idea
of rendering zero or more items, please use `renders*` instead. [invalid-render]

   validation/autofixable.js:8:23
   8| type RBad2 = renders (Foo | Array<Foo> | Foo[] | $ReadOnlyArray<Foo> | Set<Foo> | Iterable<Foo>);
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   validation/autofixable.js:8:50
   8| type RBad2 = renders (Foo | Array<Foo> | Foo[] | $ReadOnlyArray<Foo> | Set<Foo> | Iterable<Foo>);
                                                       ^^^^^^^^^^^^^^^^^^^ [1]
   validation/autofixable.js:8:42
   8| type RBad2 = renders (Foo | Array<Foo> | Foo[] | $ReadOnlyArray<Foo> | Set<Foo> | Iterable<Foo>);
                                               ^^^^^ [2]
   validation/autofixable.js:8:29
   8| type RBad2 = renders (Foo | Array<Foo> | Foo[] | $ReadOnlyArray<Foo> | Set<Foo> | Iterable<Foo>);
                                  ^^^^^^^^^^ [3]
   validation/autofixable.js:8:83
   8| type RBad2 = renders (Foo | Array<Foo> | Foo[] | $ReadOnlyArray<Foo> | Set<Foo> | Iterable<Foo>);
                                                                                        ^^^^^^^^^^^^^ [4]
   validation/autofixable.js:8:72
   8| type RBad2 = renders (Foo | Array<Foo> | Foo[] | $ReadOnlyArray<Foo> | Set<Foo> | Iterable<Foo>);
                                                                             ^^^^^^^^ [5]


Error ----------------------------------------------------------------------------------- validation/autofixable.js:9:23

Cannot use array type [1] and null [2] as the type argument of renders type. Only elements of a component-syntax
components can appear in renders. If you want to express the idea of rendering zero or more items, please use `renders*`
instead. [invalid-render]

   validation/autofixable.js:9:23
   9| type RBad3 = renders (Foo | Array<Foo> | null);
                            ^^^^^^^^^^^^^^^^^^^^^^^

References:
   validation/autofixable.js:9:29
   9| type RBad3 = renders (Foo | Array<Foo> | null);
                                  ^^^^^^^^^^ [1]
   validation/autofixable.js:9:42
   9| type RBad3 = renders (Foo | Array<Foo> | null);
                                               ^^^^ [2]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:10:22

Cannot use array type [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. If you want to express the idea of rendering zero or more items, please use `renders*` instead.
[invalid-render]

   10| type RBad4 = renders Array<Foo>;
                            ^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:11:24

Cannot use null [1] as the type argument of renders type. Only elements of a component-syntax components can appear in
renders. `renders?` already includes React nodes that render nothing. [invalid-render]

   validation/autofixable.js:11:24
   11| type RBad5 = renders? (Foo | null);
                              ^^^^^^^^^^

References:
   validation/autofixable.js:11:30
   11| type RBad5 = renders? (Foo | null);
                                    ^^^^ [1]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:12:23

Cannot use null or undefined [1] and null or undefined [1] as the type argument of renders type. Only elements of a
component-syntax components can appear in renders. `renders?` already includes React nodes that render nothing.
[invalid-render]

   12| type RBad6 = renders? ?Foo;
                             ^^^^ [1]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:13:23

Cannot use array type [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. If you want to express the idea of rendering zero or more items, please use `renders*` instead.
[invalid-render]

   13| type RBad7 = renders? Array<Foo>;
                             ^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:14:23

Cannot use array type [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. `renders*` already models rendering any amount of children in all possible nesting structures.
[invalid-render]

   14| type RBad8 = renders* Array<Foo>;
                             ^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:15:24

Cannot use null [1] as the type argument of renders type. Only elements of a component-syntax components can appear in
renders. `renders*` already includes React nodes that render nothing. [invalid-render]

   validation/autofixable.js:15:24
   15| type RBad9 = renders* (Foo | null);
                              ^^^^^^^^^^

References:
   validation/autofixable.js:15:30
   15| type RBad9 = renders* (Foo | null);
                                    ^^^^ [1]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:16:24

Cannot use null [1] as the type argument of renders type. Only elements of a component-syntax components can appear in
renders. If you want to express the idea of rendering zero or one item, please use `renders?` instead. [invalid-render]

   validation/autofixable.js:16:24
   16| type RBad10 = renders (Foo | null | 1);
                              ^^^^^^^^^^^^^^

References:
   validation/autofixable.js:16:30
   16| type RBad10 = renders (Foo | null | 1);
                                    ^^^^ [1]


Error ---------------------------------------------------------------------------------- validation/autofixable.js:16:24

Cannot use number literal `1` [1] as the type argument of renders type. [invalid-render]

   validation/autofixable.js:16:24
   16| type RBad10 = renders (Foo | null | 1);
                              ^^^^^^^^^^^^^^

References:
   validation/autofixable.js:16:37
   16| type RBad10 = renders (Foo | null | 1);
                                           ^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:18:22

Cannot use `React.Element` [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. [invalid-render]

   18| type RBad1 = renders React$Element<typeof Baz>; // error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:19:22

Cannot use `React.Element` [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. [invalid-render]

   19| type RBad2 = renders React$Element<typeof Boz>; // error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:20:22

Cannot use number literal `1` [1] as the type argument of renders type. [invalid-render]

   20| type RBad3 = renders 1; // error
                            ^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:21:22

Cannot use `React.Element` [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. [invalid-render]

   21| type RBad4 = renders React$Node; // error
                            ^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:21:22

Cannot use `React.Portal` [1] as the type argument of renders type. [invalid-render]

   21| type RBad4 = renders React$Node; // error
                            ^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:21:22

Cannot use boolean [1] as the type argument of renders type. [invalid-render]

   21| type RBad4 = renders React$Node; // error
                            ^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:21:22

Cannot use null [1], undefined [1] and `$Iterable` [1] as the type argument of renders type. Only elements of a
component-syntax components can appear in renders. If you want to express the idea of rendering zero or more items,
please use `renders*` instead. [invalid-render]

   21| type RBad4 = renders React$Node; // error
                            ^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:21:22

Cannot use number [1] as the type argument of renders type. [invalid-render]

   21| type RBad4 = renders React$Node; // error
                            ^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:21:22

Cannot use string [1] as the type argument of renders type. [invalid-render]

   21| type RBad4 = renders React$Node; // error
                            ^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:22:22

Cannot use `Error` [1] as a render type because: [incompatible-type]
 - Either `Error` [1] is incompatible with `React.Element` [2].
 - Or `Error` [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in `Error` [1] but exists in `$Iterable` [4].

Render types must be a subtype of `React.Node` or a reference to a component-syntax component.

   validation/validation.js:22:22
   22| type RBad5 = renders Error; // error
                            ^^^^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------- validation/validation.js:22:22

Cannot use `Error` [1] as the type argument of renders type. [invalid-render]

   22| type RBad5 = renders Error; // error
                            ^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:23:35

Cannot use `React.Element` [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. [invalid-render]

   23| type RBad6 = component () renders React$Element<typeof Baz>; // error
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:26:41

Cannot use `React.Element` [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. [invalid-render]

   26| component BadComponentRenders() renders React$Element<typeof Baz> {return <Baz />} // error
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:29:52

Cannot use `T` [1] as the type argument of renders type. Generic type renders are only allowed in rendering declaration
of component syntax components. [invalid-render]

   29| type BannedGenericRenders<T: React$Node> = renders T; // error
                                                          ^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:31:37

Cannot use boolean literal `false` [1], null [2] and undefined [3] as the type argument of renders type. Only elements
of a component-syntax components can appear in renders. If you want to express the idea of rendering zero or one item,
please use `renders?` instead. [invalid-render]

   validation/validation.js:31:37
   31| type BadSpecificRenders1 = renders (false | null | void); // error
                                           ^^^^^^^^^^^^^^^^^^^

References:
   validation/validation.js:31:37
   31| type BadSpecificRenders1 = renders (false | null | void); // error
                                           ^^^^^ [1]
   validation/validation.js:31:45
   31| type BadSpecificRenders1 = renders (false | null | void); // error
                                                   ^^^^ [2]
   validation/validation.js:31:52
   31| type BadSpecificRenders1 = renders (false | null | void); // error
                                                          ^^^^ [3]


Error ----------------------------------------------------------------------------------- validation/validation.js:32:37

Cannot use array type [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. If you want to express the idea of rendering zero or more items, please use `renders*` instead.
[invalid-render]

   32| type BadSpecificRenders2 = renders (Array<React$Element<typeof Foo>>); // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:33:37

Cannot use read-only array type [1] as the type argument of renders type. Only elements of a component-syntax components
can appear in renders. If you want to express the idea of rendering zero or more items, please use `renders*` instead.
[invalid-render]

   33| type BadSpecificRenders3 = renders ($ReadOnlyArray<React$Element<typeof Foo>>); // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:34:37

Cannot use `$Iterable` [1] as the type argument of renders type. Only elements of a component-syntax components can
appear in renders. If you want to express the idea of rendering zero or more items, please use `renders*` instead.
[invalid-render]

   34| type BadSpecificRenders4 = renders (Iterable<React$Element<typeof Foo>>); // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:35:37

Cannot use read-only array type [1] as the type argument of renders type. Only elements of a component-syntax components
can appear in renders. If you want to express the idea of rendering zero or more items, please use `renders*` instead.
[invalid-render]

   35| type BadSpecificRenders5 = renders (React.ChildrenArray<React$Element<typeof Foo>>); // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- validation/validation.js:36:37

Cannot use read-only array type [1] and null [1] as the type argument of renders type. Only elements of a
component-syntax components can appear in renders. If you want to express the idea of rendering zero or more items,
please use `renders*` instead. [invalid-render]

   36| type BadSpecificRenders6 = renders (React.ChildrenArray<React$Element<typeof Foo> | null>); // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]



Found 92 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
